# gst-metadata-via-rtp

./: README.md  action.yml  dockerfile  meson.build
.github/workflows/: main.yml
gst-plugin/: meson.build
gst-plugin/src/: gst-libs_gst_video_gstvideometa.c  gst-libs_gst_video_gstvideometa.h  gstfacedetect.cpp  gstmeta2rtp.c  gstmeta2rtp.h  gstmetahandle.c  gstmetahandle.cpp  gstmetahandle.h
